@@ -31,7 +31,6 @@ import org.openrewrite.jgit.transport.URIish;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.List;
 
 import static java.nio.file.Files.writeString;
@@ -44,7 +43,7 @@ class OmniParserTest {
     @Test
     void isExcluded(@TempDir Path root) {
         OmniParser parser = OmniParser.builder(OmniParser.defaultResourceParsers())
-          .exclusions(List.of(Paths.get("pom.xml")))
+          .exclusions(List.of(Path.of("pom.xml")))
           .build();
         assertThat(parser.isExcluded(root.resolve("pom.xml"), root)).isTrue();
     }
@@ -79,7 +78,7 @@ class OmniParserTest {
         }
 
         OmniParser parser = OmniParser.builder(OmniParser.defaultResourceParsers())
-          .exclusions(List.of(Paths.get("pom.xml")))
+          .exclusions(List.of(Path.of("pom.xml")))
           .build();
 
         List<Path> paths = parser.acceptedPaths(repo);
@@ -153,8 +152,8 @@ class OmniParserTest {
           .toList();
 
         assertThat(paths)
-          .contains(Paths.get("project/build.gradle"))
-          .doesNotContain(Paths.get("project/.gradle/foo.yml"));
+          .contains(Path.of("project/build.gradle"))
+          .doesNotContain(Path.of("project/.gradle/foo.yml"));
     }
 
     void initGit(Path repositoryPath) {
